# graphql-actix-example

./: .env  .gitignore  Cargo.toml  README.md
migrations/2019-08-22-215715_create_cats/: down.sql  up.sql
src/: graphql.rs  main.rs  models.rs  schema.rs
