[package]
name = "graphql-actix-example"
version = "0.1.0"
authors = ["El-Hussein Abdelraouf <hussein@raoufs.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-cors = "0.1"
dotenv = "0.14.1"
env_logger = "0.6.2"
futures = "0.1.28"
juniper = "0.13"
juniper-from-schema = "^0.3"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"

